navbar , alignment of dynamic events page fixed

--- a/static/css/evesingle.css
+++ b/static/css/evesingle.css
@@ -5326,7 +5326,7 @@ html.no-csstransitions .s-hero__content {
     position: relative;
  padding: 40px;
       text-align: center;
-      padding-top: 40px;
+      padding-top: 110px;
       font-size: 3rem;
       color:red;
      
@@ -5422,7 +5422,7 @@ font-size: 5rem;
     font-size: 12px;
     color: white;
     position: relative;
-    bottom: 250px;
+    bottom: 150px;
     right:100px;
   }
   
@@ -5466,7 +5466,7 @@ font-size: 5rem;
   
   .desc_p{
     position: relative;
-    bottom:400px;
+    bottom:450px;
 }
 .swiper-button-prev{
     font-weight: 900;
