--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3374,7 +3374,7 @@ input::-moz-focus-inner {
         visibility: hidden;
     }
     .s-header__nav {
-        display: block;
+        display: inline-grid;
         width: 100%;
         padding: 0;
     }
@@ -4979,110 +4979,7 @@ html.no-csstransitions .s-hero__content {
 }
 
 
-.container nav {
-    width: 100%;
-    height: 75px;
-    background: #444759;
-    border-bottom: 1px solid #3d3f50;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999;
-  }
-  
-  nav ul {
-    width: 65%;
-    height: 100%;
-    margin: 0 auto;
-    list-style: none;
-    transition: all 0.5s ease;
-  }
-  
-  nav ul li {
-    
-    float: left;
-    text-align: center;
-    
-    cursor: pointer;
-    color: #eee;
-    font-size: 15px; 
-    font-weight: 400;
-    
-    text-transform: uppercase;
-    transition: all 0.5s ease;
-  
-    position: relative;
-  }
-  
- 
-  /* sub-menu */
-  
-  nav ul li ul.sub-nav {
-    position: absolute;
-    top: 55px;
-    
-    width: 200px;
-    height: 70px;
-    background: #444759;
-    border-top: 1px solid #3d3f50;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.14), -1px 0px 1px rgba(0, 0, 0, 0.14);
-    visibility: hidden;
-    opacity: 0;
-  }
-  
-  nav ul li ul.sub-nav li {
-    color: #eee;
-    font-size: 14px;
-    font-weight: 700;
-    width: 100%;
-    padding: 10px 0;
-  }
-  
-  nav ul li ul.sub-nav li:hover {
-    
-    box-shadow: 0 0;
-  }
-  
-  nav ul li:hover ul.sub-nav {
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  .header {
-    background: url("https://i.imgur.com/8A6fSIg.jpg") no-repeat center;
-    background-size: cover;
-    width: 100%;
-    min-height: 400px;
-    margin-top: 75px;
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  /* youtube link */
-  .youtube{
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    width: 160px;
-    text-align: center;
-    padding: 15px 10px;
-    background: #bb0000;
-    border-radius: 5px;
-  }
-  
-  .youtube a{
-    text-decoration: none;
-    color: #fff;
-    text-transform: capitalize;
-    letter-spacing: 1px;
-  }
+
   
   
   
